Realização do Scaffold-DbContext

--- a/myLibrary-api/appsettings.json
+++ b/myLibrary-api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myLibraryDB": "Server=(localdb)\\anderDB;Database=myLibraryDB;Trusted_Connection=True;"
+  }
+
 }
